--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
         <nav class="header-nav">
             <a class="link header-logo" lang="en" href=""><span class="logo-color-header">Web</span>Studio</a>
             <ul class="list header-list">
-                <li><a class="link header-link" href="./index.html">студия</a></li>
-                <li><a class="link header-link" href="./portfolio.html">портфолио</a></li>
-                <li><a class="link header-link" href="">контакты</a></li>
+                <li><a class="link header-link" href="./index.html">Студия</a></li>
+                <li><a class="link header-link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link header-link" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul class="list header-contacts">
