--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <!--hero-->
         <section class="hero">
-            <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button type="button" class="button">заказать услугу</button>
         </section>
         <!--under_hero-->
@@ -41,19 +41,19 @@
             <h2 hidden>особенности</h2>
             <ul class="list">
                 <li>
-                    <h3 class="uh-title">Внимание к деталям</h3>
+                    <h3 class="uh-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p class="uh-item">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="uh-title">Пунктуальность</h3>
+                    <h3 class="uh-title">ПУНКТУАЛЬНОСТЬ</h3>
                     <p class="uh-item">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="uh-title">Планирование</h3>
+                    <h3 class="uh-title">ПЛАНИРОВАНИЕ</h3>
                     <p class="uh-item">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3 class="uh-title">Современные технологии</h3>
+                    <h3 class="uh-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="uh-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
